--- a/index.html
+++ b/index.html
@@ -113,6 +113,6 @@
 <!-- footer ends here -->
 
 
-        <script src="./scirpt.js"></script>
+<script src="script.js" type="text/javascript"></script>
     </body>
 </html>
